almost done! big progress on report, various fixes in code, now waiting for final data

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -8,8 +8,8 @@
 
 \begin{center}
     {\bfseries {\Large Finite-size DMRG characterization of the}} \\[0.8em]
-    {\bfseries {\Large 1D Fermi-Hubbard model phase diagram}}\\[0.8em]
-    {\bfseries {\Large under bosonization framework}} \\[1em]
+    {\bfseries {\Large 1D spinless Fermi-Hubbard model phase diagram}}\\[0.8em]
+    {\bfseries {\Large in the Bosonization framework}} \\[1em]
     \large University of Pisa, a.y.~2024-2025 \\[0.8em]
     Alessandro Gori\footnote{\href{mailto:a.gori23@studenti.unipi.it}{a.gori23@studenti.unipi.it} / \href{https://github.com/nepero27178}{nepero27178@github.com}} \\[0.8em]
     \scriptsize Final project for the Master's Degree course ``Quantum Liquids''
@@ -36,6 +36,10 @@
 \input{sections/fermi-hubbard}
 
 \input{sections/simulations}
+
+\begin{flushright}
+	\textit{That's all folks!}
+\end{flushright}
 
 \printbibliography \nocite{*}
 
